popup/style.css
:root {
  --command-input-border: 2px solid #fc6;
  --scroll-bar-thumb-color: #d8d8d8;
  --scroll-bar-background-color: #eee;
  --background-color: #fff;
  --text-color: #000;
  --text-color-selected: #000;
  --text-color-marked: #000;
  --footer-background-color: #dda0dd;
  --footer-text-color: #000;
  --candidate-text-color-hover: #000;
  --candidate-background-color-hover: #d8d8d8;
  --candidate-background-color-selected: #87cefa;
  --candidate-background-color-selected-hover: #6ca5c8;
  --candidate-background-color-marked: #00bfff;
  --candidate-background-color-marked-hover: #09c;
  --candidate-background-color-selected-marked: #00a2d9;
  --candidate-background-color-selected-marked-hover: #007ca6;
  --separator-background-color: #fc6;
  --separator-text-color: #000;
  --image-invert-percent: 0%;
  --ext-image-invert-percent: 0%;
  --ext-image-invert-percent-selected: 0%;
}

[data-theme="simple-dark"] {
  --command-input-border: 1px solid #00adee;
  --scroll-bar-thumb-color: #535353;
  --scroll-bar-background-color: #282828;
  --background-color: #353535;
  --text-color: #cecece;
  --text-color-selected: #ffe6b0;
  --text-color-marked:  #353535;
  --footer-background-color: #383838;
  --footer-text-color: #769262;
  --candidate-text-color-hover: #353535;
  --candidate-background-color-hover: #d8d8d8;
  --candidate-background-color-selected: #2b2b2b;
  --candidate-background-color-selected-hover: #2b2b2b;
  --candidate-background-color-marked: #00bfff;
  --candidate-background-color-marked-hover: #09c;
  --candidate-background-color-selected-marked: #00a2d9;
  --candidate-background-color-selected-marked-hover: #007ca6;
  --separator-background-color: #282828;
  --separator-text-color: #00adee;
  --image-invert-percent: 30%;
  --ext-image-invert-percent: 60%;
  --ext-image-invert-percent-selected: 100%;
}

@media screen and (-webkit-min-device-pixel-ratio: 0) {
  /* only chrome */
  body {
    height: 500px;
    width: 700px;
  }
}

body,
#container,
*[data-theme] {
  color: var(--text-color);
  background-color: var(--background-color);
}

*[data-theme] {
  /* firefox only */
  scrollbar-width: thin;
  scrollbar-color: var(--scroll-bar-thumb-color) var(--scroll-bar-background-color);
}

*[data-theme]::-webkit-scrollbar {
  width: 5px;
  height: 8px;
  background-color: var(--scroll-bar-background-color);
}

/* Add a thumb */
*[data-theme]::-webkit-scrollbar-thumb {
  background: var(--scroll-bar-thumb-color);
}

.commandForm {
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: visible;
}

.commandInput {
  position: fixed;
  margin: 0;
  width: 100%;
  padding: 8px;
  top: 0;
  height: 36px;
  box-sizing: border-box;
  z-index: 100;
  color: var(--text-color);
  background-color: var(--background-color);
  border: var(--command-input-border);
}

.footer {
  position: fixed;
  padding: 0 8px;
  bottom: 0;
  height: 18px;
  width: 100%;
  box-sizing: border-box;
  font-size: small;
  background-color: var(--footer-background-color);
  color: var(--footer-text-color);
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.candidatesList {
  list-style-type: none;
  margin: 0;
  padding: 36px 0 18px 0;
  background-color: var(--background-color);
  color: var(--text-color);
}

.candidatesList-no-footer {
  list-style-type: none;
  margin: 0;
  padding: 36px 0 0;
}

.candidate {
  display: block;
  padding: 8px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.candidate:hover {
  color: var(--candidate-text-color-hover);
  background-color: var(--candidate-background-color-hover);
}

.candidate.selected {
  color: var(--text-color-selected);
  background-color: var(--candidate-background-color-selected);
}

.candidate.selected:hover {
  background-color: var(--candidate-background-color-selected-hover);
}

.candidate.marked {
  color: var(--text-color-marked);
  background-color: var(--candidate-background-color-marked);
}

.candidate.marked:hover {
  background-color: var(--candidate-background-color-marked-hover);
}

.candidate.selected.marked {
  background-color: var(--candidate-background-color-selected-marked);
}

.candidate.selected.marked:hover {
  background-color: var(--candidate-background-color-selected-marked-hover);
}

.candidate-label {
  display: inline;
  margin: 8px;
  margin-left: 0;
  width: 100%;
  vertical-align: middle;
  white-space: nowrap;
  overflow: hidden;
}

.candidate-icon {
  display: inline;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  margin-right: 4px;
  padding: 0;
}

.candidate .candidate-icon {
  filter: invert(var(--image-invert-percent));
}

.candidate .candidate-icon.candidate-icon-ext {
  filter: invert(var(--ext-image-invert-percent));
}

.candidate:hover .candidate-icon.candidate-icon-ext,
.candidate.selected .candidate-icon.candidate-icon-ext,
.candidate.marked .candidate-icon.candidate-icon-ext {
  filter: invert(var(--ext-image-invert-percent-selected));
}

.candidate-icon-dummy {
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
  margin-right: 4px;
  padding: 0;
}

.separator {
  padding: 1px 8px;
  font-size: small;
  background-color: var(--separator-background-color);
  color: var(--separator-text-color);
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

